# PyGrader

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/workflows/: publish.yml  pylint.yml  python-package-ubuntu.yml  python-package-windows.yml  python-package.yml  python-publish-to-pypi.yml  python-publish-to-testpypi.yml  tests-ubuntu.yml  tests-windows.yml
src/pycomgrader/: cli_grader.py  pycomgrader.py
src/pygrader/: __init__.py  cli_grader.py
tests/: test_cli_grader.py  test_pycomgrader.py  test_pygrader.py
tests/submits/: atoi_ce.cpp  atoi_ok.cpp  atoi_wa.cpp
tests/test_cases/: 03.in
tests/test_programs/: compile_error_program.cpp  test_program.cpp
tests/testcases/: 05.in  06.in  07.in  08.in  09.in  10.in  11.in  12.in
