[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygrader"
version = "1.0.0"
description = "this module provides a grader for c++ programs."
readme = "README.md"
authors = [{ name = "Anibal Hernández"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["competitive programming", "educational", "grader", "c++"]
dependencies = ["psutil"]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pathtype", "rich"]

[project.urls]
Homepage = "https://github.com/ajhglez99/PyGrader"

[project.scripts]
pygrader = "pygrader.cli_grader:cli_grader"