[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycomgrader"
version = "1.0.0"
description = "this module provides a grader for c++ programs."
readme = "README.md"
authors = [{ name = "Anibal Hernández"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["competitive programming", "educational", "grader", "c++"]
dependencies = ["psutil", "pathtype", "rich"]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/ajhglez99/PyGrader"

[project.scripts]
pycomgrader = "pycomgrader.cli_grader:cli_grader"